minor typo fixes on slides

--- a/slides/nextflow_intro.html
+++ b/slides/nextflow_intro.html
@@ -68,7 +68,7 @@ href="https://www.nextflow.io/blog/2024/nextflow-2404-highlights.html">24.04</a>
 <li>Complicated workflows are hard to maintain and share
 <ul>
 <li>How do you reproduce the setup of all the different software your
-worflow requires?</li>
+workflow requires?</li>
 <li>If you want to run your workflow on a different environment, how do
 you do that?</li>
 </ul></li>
@@ -182,7 +182,6 @@ works just like a pipe in bash
 <li>You can pipe from any process/operator with one output channel to
 any process/operator with one input channel</li>
 </ul></li>
-<li>TODO: show picture of branching, show picture of pipe</li>
 </ul>
 <pre><code># Piping
 A | B | C
@@ -221,7 +220,7 @@ myList.size() // returns 3
 // parentheses can be omitted for single parameter functions 
 // e.g., the following two lines are equivalent:
 println(&quot;hello world&quot;)
-println &quot;hello world
+println &quot;hello world&quot;
 </code></pre>
 <ul>
 <li>Read more: <a
